--- a/RedlineApp/RedlineApp/RedlineApp.iOS/RedlineApp.iOS.csproj
+++ b/RedlineApp/RedlineApp/RedlineApp.iOS/RedlineApp.iOS.csproj
@@ -132,11 +132,14 @@
     </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+    <PackageReference Include="SQLiteNetExtensions">
+      <Version>2.1.0</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
     <ProjectReference Include="..\RedlineApp\RedlineApp.csproj">
-      <Project>{9025FF25-E74A-4859-8801-740D20E0A519}</Project>
+      <Project>{255448A1-E376-44F8-832B-D8066E71D5CC}</Project>
       <Name>RedlineApp</Name>
     </ProjectReference>
   </ItemGroup>
