--- a/RedlineApp/RedlineApp/RedlineApp.Android/Properties/AndroidManifest.xml
+++ b/RedlineApp/RedlineApp/RedlineApp.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.companyname.redlineapp">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="yvan.eht.nioj" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="29" />
-	<application android:label="RedlineApp.Android" android:theme="@style/MainTheme"></application>
-	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<application android:label="YourApp.Android">
+        <uses-library android:name="org.apache.http.legacy" android:required="false" />
+        <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyC7W4MIjUl-83OZv1Coz7gfzxNEiipTipM"/>
+		<meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
+	
+	</application>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
+	<uses-feature android:name="android.hardware.location" android:required="false" />
+	<uses-feature android:name="android.hardware.location.gps" android:required="false" />
+	<uses-feature android:name="android.hardware.location.network" android:required="false" />
 </manifest>
