--- a/RedlineApp/RedlineApp/RedlineApp.iOS/RedlineApp.iOS.csproj
+++ b/RedlineApp/RedlineApp/RedlineApp.iOS/RedlineApp.iOS.csproj
@@ -135,6 +135,9 @@
     <PackageReference Include="SQLiteNetExtensions">
       <Version>2.1.0</Version>
     </PackageReference>
+    <PackageReference Include="Xamarin.Forms.GoogleMaps">
+      <Version>3.3.0</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
