--- a/RedlineApp/RedlineApp/RedlineApp/RedlineApp.csproj
+++ b/RedlineApp/RedlineApp/RedlineApp/RedlineApp.csproj
@@ -28,6 +28,7 @@
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
     <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
     <PackageReference Include="SQLiteNetExtensions" Version="2.1.0" />
+    <PackageReference Include="Xamarin.Forms.GoogleMaps" Version="3.3.0" />
   </ItemGroup>
 
   <ItemGroup>
