--- a/RedlineApp/RedlineApp/RedlineApp.iOS/Info.plist
+++ b/RedlineApp/RedlineApp/RedlineApp.iOS/Info.plist
@@ -34,5 +34,11 @@
     <string>RedlineApp</string>
     <key>XSAppIconAssets</key>
     <string>Assets.xcassets/AppIcon.appiconset</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>Can Redline use your location at all times to locate nearby medical services?</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Can Redline use your location when your application is being used to locate nearby medical services?</string>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>Can Redline use your location at all times to locate nearby medical services?</string>
 </dict>
 </plist>
